--- a/src/Componentes/cards.css
+++ b/src/Componentes/cards.css
@@ -50,17 +50,35 @@ p {
 }
 .btnCard {
     border: none;
-    width: 30px;
+    width: 20px;
     background: transparent;
     z-index: 9;
+    margin-left: 15px;
 }
 .btnCard img {
-    width: 60%;
+    width: 100%;
     filter: drop-shadow(3px 3px 6px black);
 }
 .btnCard:hover {
     cursor: pointer;
 }
+.carrito {
+    background-image: url("../img/carritoCompras.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    font-size: 0;
+}
+.lupa {
+    background-image: url("../img/lupa.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    font-size: 0;
+}
+
 @media screen and (min-width: 1024px) {
     .tarjeta {
         width: 20%;
