--- a/src/Componentes/lupa.css
+++ b/src/Componentes/lupa.css
@@ -8,13 +8,13 @@
     position:fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 30;
 }
 .contenedor {
     width: 50%;
     height: 70%;
     margin-top: 50px;
-    background-color: rgba(255, 255, 255, 0.349);
+    background-color: transparent;
     border-radius: 0.75rem;
     position: relative;
     
@@ -28,6 +28,12 @@
     height: 100%;
     border-radius: 20px;
     border: 10px solid orangered;
+    transition: all .5s;
+    z-index:30;
+    cursor:url("../img/lupa.webp"),auto;
+}
+.contenedorImg img:hover {
+    transform: scale(1.4);
 }
 .btnCerrar {
     position: absolute;
