Correccion de errores, actualizacion y mejoras

--- a/src/Componentes/cards.css
+++ b/src/Componentes/cards.css
@@ -43,7 +43,7 @@
     width: 90%;
     min-height: 80px;
     margin: 5px 0;
-    text-align: center;
+    text-align: cener;
 }
 p {
     margin-top: 5px;
