--- a/src/Componentes/Main.css
+++ b/src/Componentes/Main.css
@@ -73,3 +73,12 @@ section {
     position: absolute;
     background-color: transparent;    
 }
+footer {
+    width: 100%;
+    height: 40px;
+    background-color: #dedede;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.75rem;
+}
