--- a/src/Componentes/carrito.css
+++ b/src/Componentes/carrito.css
@@ -120,6 +120,19 @@
     border-radius: 0.25rem;
     width: 80px;
 }
+
+h2 {
+    font-size: .90rem;
+    padding: 10px;
+    border: thin solid grey;
+    border-radius: 0.80rem;
+    margin-top: 10px;
+    color: grey;
+}
+.carritoVacioImg {
+    width: 50%;
+    margin-top: 20px;;
+}
 @media screen and (min-width: 1024px) {
     .imgProducto img {
      width: 30%;
@@ -132,5 +145,11 @@
     }
     .inputName {
         width: 150px;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    .carritoVacioImg {
+        width: 60%;
     }
   }
