Prueba de iconos

--- a/src/Componentes/cards.css
+++ b/src/Componentes/cards.css
@@ -63,7 +63,7 @@ p {
     cursor: pointer;
 }
 .carrito {
-    background-image: url("../img/carritoCompras.webp");
+    background-image: url("../img/masproductos.webp");
     background-repeat: no-repeat;
     background-size: cover;
     width: 20px;
